--- a/public/index.html
+++ b/public/index.html
@@ -3,23 +3,44 @@
   <head>
     <meta charset="utf-8" />
 
-    <title>Uniswap Interface</title>
-    <meta name="description" content="Swap or provide liquidity on the Uniswap Protocol" />
+    <title>XChange</title>
+    <meta name="description" content="Swap, Borrow, and Lend on the X7 Finance Xchange" />
+    <meta content="XChange | Swap" property="og:title" />
+    <meta content="website" property="og:type" />
+    <meta content="%PUBLIC_URL%/images/background.png" property="og:image" />
+    <meta content="Swap, Borrow, and Lend on the X7 Finance Xchange" property="og:description" />
+    <meta content="X7Finance" property="og:site_name" />
+    <meta content="600" property="og:image:width" />
+    <meta content="320" property="og:image:height" />
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta name="twitter:image" content="%PUBLIC_URL%/images/background.png" />
 
     <!--
       %PUBLIC_URL% will be replaced with the URL of the `public` folder during build.
       Only files inside the `public` folder can be referenced from the HTML.
     -->
-    <link rel="shortcut icon" type="image/png" href="%PUBLIC_URL%/favicon.png" />
-    <link rel="apple-touch-icon" sizes="192x192" href="%PUBLIC_URL%/images/192x192_App_Icon.png" />
-    <link rel="apple-touch-icon" sizes="512x512" href="%PUBLIC_URL%/images/512x512_App_Icon.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="57x57" href="%PUBLIC_URL%/images/apple-touch-icon-57x57.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="%PUBLIC_URL%/images/apple-touch-icon-114x114.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="%PUBLIC_URL%/images/apple-touch-icon-72x72.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="%PUBLIC_URL%/images/apple-touch-icon-144x144.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="60x60" href="%PUBLIC_URL%/images/apple-touch-icon-60x60.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="120x120" href="%PUBLIC_URL%/images/apple-touch-icon-120x120.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="76x76" href="%PUBLIC_URL%/images/apple-touch-icon-76x76.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="152x152" href="%PUBLIC_URL%/images/apple-touch-icon-152x152.png" />
+    <link rel="icon" type="image/png" href="%PUBLIC_URL%/images/favicon-196x196.png" sizes="196x196" />
+    <link rel="icon" type="image/png" href="%PUBLIC_URL%/images/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/png" href="%PUBLIC_URL%/images/favicon-32x32.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="%PUBLIC_URL%/images/favicon-16x16.png" sizes="16x16" />
+    <link rel="icon" type="image/png" href="%PUBLIC_URL%/images/favicon-128.png" sizes="128x128" />
+    <meta name="application-name" content="&nbsp;" />
+    <meta name="msapplication-TileColor" content="#000000" />
+    <meta name="msapplication-TileImage" content="%PUBLIC_URL%/images/mstile-144x144.png" />
+    <meta name="msapplication-square70x70logo" content="%PUBLIC_URL%/images/mstile-70x70.png" />
+    <meta name="msapplication-square150x150logo" content="%PUBLIC_URL%/images/mstile-150x150.png" />
+    <meta name="msapplication-wide310x150logo" content="%PUBLIC_URL%/images/mstile-310x150.png" />
+    <meta name="msapplication-square310x310logo" content="%PUBLIC_URL%/images/mstile-310x310.png" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <meta name="theme-color" content="#FC72FF" />
-    <meta
-      http-equiv="Content-Security-Policy"
-      content="script-src 'self' https://www.google-analytics.com https://www.googletagmanager.com 'unsafe-inline'"
-    />
 
     <!--
       manifest.json provides metadata used when the app is installed as a PWA.
@@ -27,13 +48,11 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <link rel="preconnect" href="https://www.google-analytics.com/" />
-
-    <link rel="preload" href="%PUBLIC_URL%/fonts/Inter-roman.var.woff2" as="font" type="font/woff2" crossorigin />
+    <link rel="preload" href="%PUBLIC_URL%/fonts/SpaceMono-Regular.woff2" as="font" type="font/woff2" crossorigin />
 
     <style>
       * {
-        font-family: 'Inter', sans-serif;
+        font-family: 'SpaceMono', sans-serif;
         box-sizing: border-box;
       }
 
@@ -41,19 +60,19 @@
           Explicitly load Inter var from public/ so it does not block LCP's critical path.
         */
       @font-face {
-        font-family: 'Inter custom';
-        font-weight: 100 900;
+        font-family: 'SpaceMono custom';
+        font-weight: 400 700;
         font-style: normal;
         font-display: block;
         font-named-instance: 'Regular';
-        src: url(%PUBLIC_URL%/fonts/Inter-roman.var.woff2) format('woff2 supports variations(gvar)'),
-          url(%PUBLIC_URL%/fonts/Inter-roman.var.woff2) format('woff2-variations'),
-          url(%PUBLIC_URL%/fonts/Inter-roman.var.woff2) format('woff2');
+        src: url(%PUBLIC_URL%/fonts/SpaceMono-Regular.woff2) format('woff2 supports variations(gvar)'),
+          url(%PUBLIC_URL%/fonts/SpaceMono-Regular.woff2) format('woff2-variations'),
+          url(%PUBLIC_URL%/fonts/SpaceMono-Regular.woff2) format('woff2');
       }
 
       @supports (font-variation-settings: normal) {
         * {
-          font-family: 'Inter custom', sans-serif;
+          font-family: 'SpaceMono custom', sans-serif;
         }
       }
 
@@ -69,6 +88,7 @@
 
       html {
         font-size: 16px;
+        color: black;
         font-variant: none;
         font-smooth: always;
         -webkit-font-smoothing: antialiased;
@@ -77,7 +97,7 @@
       }
 
       #background-radial-gradient {
-        background: linear-gradient(180deg, #202738 0%, #070816 100%);
+        background: white;
         position: fixed;
         top: 0;
         left: 0;
@@ -85,26 +105,50 @@
         pointer-events: none;
         width: 200vw;
         height: 200vh;
-        transform: translate(-50vw, -100vh);
+        transform: translate(0, 0vh);
         z-index: -1;
+      }
+
+      @media (min-width: 380px) {
+        #background-radial-gradient {
+          transform: translate(0, 2vh);
+        }
+      }
+
+      @media (min-width: 640px) {
+        #background-radial-gradient {
+          transform: translate(0, 15vh);
+        }
+      }
+
+      @media (min-width: 768px) {
+        #background-radial-gradient {
+          transform: translate(0, 15vh);
+        }
+      }
+
+      @media (min-width: 1024px) {
+        #background-radial-gradient {
+          transform: translate(0, 20vh);
+        }
+      }
+
+      @media (min-width: 1280px) {
+        #background-radial-gradient {
+          transform: translate(0, 35vh);
+        }
+      }
+
+      @media (min-width: 1536px) {
+        #background-radial-gradient {
+          transform: translate(0, 40vh);
+        }
       }
 
       html,
       body,
       #root {
         min-height: 100%;
-      }
-
-      @media (prefers-color-scheme: dark) {
-        html {
-          background-color: #212429;
-        }
-      }
-
-      @media (prefers-color-scheme: light) {
-        html {
-          background-color: #f7f8fa;
-        }
       }
     </style>
   </head>
